# lijinfei

./: .gitignore  README.md
day02/array/src/: main.rs
day02/bubble/: Cargo.toml
day02/bubble/bubblels/: Cargo.toml
day02/bubble/src/: main.rs
day02/fibo/src/: main2.rs  main3.rs  main4.rs
day02/hello_cargo/src/: main.rs
day02/homework/max_divisor/: Cargo.toml
day02/prima/: Cargo.toml
day02/prima/src/: main.rs
day02/rust_hello_world/: main
day02/rust_num/: Cargo.toml
day02/rust_num/src/: main.rs
day02/rust_variable/: Cargo.toml
day02/rust_variable/src/: main.rs
day02/transform-temp/: Cargo.toml
day02/transform-temp/src/: main.rs  main1.rs
day03/example_match/: Cargo.toml
day03/example_match/src/: main.rs  main1.rs
day03/homework/src/: main.rs
day03/ownership_move/: Cargo.toml
day03/ownership_move/src/: main.rs
day03/ownership_ref/: Cargo.toml
day03/ownership_ref/src/: main.rs
day03/ownershop_rc/: Cargo.toml
day03/ownershop_rc/src/: main.rs  main1.rs
day04/grades/: Cargo.toml
day04/grades/src/: main.rs  name.txt
day04/homework/: Cargo.toml
day04/homework/src/: main.rs  product1.txt  product2.txt  product3.txt
day04/traits/src/: main.rs
day05/chanel/: Cargo.toml
day05/future/: Cargo.toml
day05/pai/: Cargo.toml
day06/hello-wasm/: Cargo.toml  index.html  md.html  private.pem  public.pem
day06/hello-wasm/src/: lib.rs
day06/homework/: Cargo.toml  index.html
day06/neo-lib-test/: index.js  package.json
day06/node-mod/: index.js  package.json
day07/mongo/: index.js
day07/pet-store/: Cargo.toml  Rocket.toml
(+17 files in other folders)
