[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
comrak = "0.26.0"
getrandom = {version = "0.2.15", features = ["js"]}
rand = "0.8.5"
rsa = "0.9.6"
wasm-bindgen = "0.2.92"
web-sys =  {version =  "0.3.69", features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window"
]}
